--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=false",
+    "secure-mode": "jest --watch --verbose=true",
     "mig-m": "knex migrate:make --env test",
     "mig-l": "knex migrate:latest --env test",
     "mig-r": "knex migrate:rollback --env test"
