--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "node src/server.js",
     "test": "jest",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=true",
+    "secure-mode": "jest --watch --verbose=false",
     "mig-m": "knex migrate:make --env test",
     "mig-l": "knex migrate:latest --env test",
     "mig-r": "knex migrate:rollback --env test"
@@ -23,6 +23,7 @@
     "supertest": "3.3.0"
   },
   "dependencies": {
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "1.18.3",
     "consign": "0.1.6",
     "express": "4.16.4",
