--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest",
+    "test": "jest --coverage --runInBand --forceExit",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=true",
+    "secure-mode": "jest --watch --verbose=true --runInBand --forceExit",
     "kmig-m": "knex migrate:make --env test",
     "kmig-l": "knex migrate:latest --env test",
     "kmig-r": "knex migrate:rollback --env test",
