--- a/package.json
+++ b/package.json
@@ -3,11 +3,24 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "jest": {
+    "coverageThreshold": {
+      "global": {
+        "statements": 80,
+        "branches": 80,
+        "functions": 80,
+        "lines": 80
+      },
+      "./src/services": {
+        "lines": 100
+      }
+    }
+  },
   "scripts": {
     "start": "node src/server.js",
-    "test": "jest --coverage --runInBand --forceExit",
+    "test": "jest --coverage --runInBand --detectOpenHandles",
     "lint": "eslint src/** test/** --fix",
-    "secure-mode": "jest --watch --verbose=true --runInBand --forceExit",
+    "secure-mode": "jest --watch --verbose=true --runInBand --detectOpenHandles",
     "kmig-m": "knex migrate:make --env test",
     "kmig-l": "knex migrate:latest --env test",
     "kmig-r": "knex migrate:rollback --env test",
